name:                datenverbrauch
version:             0.2.5-SNAPSHOT
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/section77/datenverbrauch#readme
license:             MIT
license-file:        LICENSE
author:              j-keck
maintainer:          jhyphenkeck@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable datenverbrauch
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -W
  other-modules:       Args
                      , Paths_datenverbrauch
                      , PublishTariff
                      , QueryTariff
                      , Types
  build-depends:       base >= 4.7 && < 5
                     , basic-prelude
                     , bytestring
                     , lens
                     , optparse-applicative
                     , tagsoup
                     , text
                     , time
                     , transformers
                     , wreq
                     , HStringTemplate
  default-extensions: NoImplicitPrelude

test-suite doctest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             doctest.hs
  build-depends:       base
                     , doctest
  default-language:    Haskell2010
                     

